--- a/BallScrewVCP4.ui
+++ b/BallScrewVCP4.ui
@@ -167,19 +167,6 @@ font: bold</string>
        <layout class="QGridLayout" name="gridLayout_13">
         <item row="1" column="2">
          <layout class="QGridLayout" name="gridLayout_12">
-          <item row="2" column="5">
-           <spacer name="horizontalSpacer_15">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
           <item row="2" column="2">
            <spacer name="horizontalSpacer_14">
             <property name="orientation">
@@ -193,38 +180,20 @@ font: bold</string>
             </property>
            </spacer>
           </item>
-          <item row="2" column="3">
-           <widget class="LED" name="ledLoad_Is_On34">
-            <property name="color">
-             <color>
-              <red>252</red>
-              <green>233</green>
-              <blue>79</blue>
-             </color>
+          <item row="2" column="6">
+           <spacer name="horizontalSpacer_15">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
             </property>
-           </widget>
-          </item>
-          <item row="3" column="3" colspan="2">
-           <widget class="ActionButton" name="btnDevice_Off34">
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(239, 41, 41);</string>
-            </property>
-            <property name="icon">
-             <iconset>
-              <normaloff>resources/circle.png</normaloff>resources/circle.png</iconset>
-            </property>
-            <property name="iconSize">
+            <property name="sizeHint" stdset="0">
              <size>
               <width>40</width>
-              <height>40</height>
+              <height>20</height>
              </size>
             </property>
-            <property name="machine_on_action" stdset="0">
-             <bool>true</bool>
-            </property>
-           </widget>
+           </spacer>
           </item>
-          <item row="2" column="4">
+          <item row="2" column="5">
            <widget class="LED" name="ledPos_Is_On34">
             <property name="color">
              <color>
@@ -232,46 +201,6 @@ font: bold</string>
               <green>233</green>
               <blue>79</blue>
              </color>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="3" colspan="2">
-           <widget class="ActionButton" name="btnDevice_On34">
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(138, 226, 52);</string>
-            </property>
-            <property name="icon">
-             <iconset>
-              <normaloff>resources/vertical_line.png</normaloff>resources/vertical_line.png</iconset>
-            </property>
-            <property name="iconSize">
-             <size>
-              <width>40</width>
-              <height>40</height>
-             </size>
-            </property>
-            <property name="machine_on_action" stdset="0">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="5">
-           <widget class="ActionButton" name="actionbutton">
-            <property name="text">
-             <string>Machine
-on</string>
-            </property>
-            <property name="indicator_option" stdset="0">
-             <bool>true</bool>
-            </property>
-            <property name="indicator_status_option" stdset="0">
-             <bool>true</bool>
-            </property>
-            <property name="is_estopped_status" stdset="0">
-             <bool>true</bool>
-            </property>
-            <property name="estop_action" stdset="0">
-             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -291,7 +220,7 @@ qproperty-flashing: true;
 qproperty-flashRate: 200;</string>
             </property>
             <property name="diameter">
-             <number>70</number>
+             <number>100</number>
             </property>
             <property name="off_color" stdset="0">
              <color>
@@ -356,6 +285,111 @@ qproperty-flashRate: 200;</string>
              </widget>
             </item>
            </layout>
+          </item>
+          <item row="1" column="4" colspan="2">
+           <widget class="ActionButton" name="btnDevice_On34_2">
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(138, 226, 52);</string>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>resources/vertical_line.png</normaloff>resources/vertical_line.png</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>40</width>
+              <height>40</height>
+             </size>
+            </property>
+            <property name="machine_on_action" stdset="0">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="4" colspan="2">
+           <widget class="ActionButton" name="btnDevice_Off34_2">
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(239, 41, 41);</string>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>resources/circle.png</normaloff>resources/circle.png</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>40</width>
+              <height>40</height>
+             </size>
+            </property>
+            <property name="machine_on_action" stdset="0">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="6">
+           <widget class="ActionButton" name="actionbutton">
+            <property name="text">
+             <string>Machine
+on</string>
+            </property>
+            <property name="indicator_option" stdset="0">
+             <bool>true</bool>
+            </property>
+            <property name="indicator_status_option" stdset="0">
+             <bool>true</bool>
+            </property>
+            <property name="is_estopped_status" stdset="0">
+             <bool>true</bool>
+            </property>
+            <property name="estop_action" stdset="0">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="4">
+           <widget class="LED" name="ledLoad_Is_On34">
+            <property name="color">
+             <color>
+              <red>252</red>
+              <green>233</green>
+              <blue>79</blue>
+             </color>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="3">
+           <widget class="PushButton" name="btnDevice_On34">
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(138, 226, 52);</string>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>resources/vertical_line.png</normaloff>resources/vertical_line.png</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>40</width>
+              <height>40</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="3">
+           <widget class="PushButton" name="btnDevice_Off34">
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(239, 41, 41);</string>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>resources/circle.png</normaloff>resources/circle.png</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>40</width>
+              <height>40</height>
+             </size>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
@@ -780,7 +814,7 @@ qproperty-flashRate: 200;</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>530</width>
+             <width>559</width>
              <height>599</height>
             </rect>
            </property>
@@ -1061,7 +1095,7 @@ qproperty-flashRate: 200;</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>530</width>
+             <width>559</width>
              <height>599</height>
             </rect>
            </property>
@@ -1163,6 +1197,9 @@ font: 15pt bold;</string>
           </property>
           <property name="text">
            <string>3.4 Обкатка ШВМ</string>
+          </property>
+          <property name="margin">
+           <number>5</number>
           </property>
          </widget>
         </item>
