--- a/BallScrewVCP3.ui
+++ b/BallScrewVCP3.ui
@@ -405,7 +405,7 @@ font: bold</string>
            <enum>QFrame::Plain</enum>
           </property>
           <property name="currentIndex">
-           <number>0</number>
+           <number>1</number>
           </property>
           <widget class="QWidget" name="page">
            <property name="geometry">
@@ -413,7 +413,7 @@ font: bold</string>
              <x>0</x>
              <y>0</y>
              <width>503</width>
-             <height>599</height>
+             <height>566</height>
             </rect>
            </property>
            <attribute name="label">
@@ -659,7 +659,7 @@ font: bold</string>
              <x>0</x>
              <y>0</y>
              <width>503</width>
-             <height>599</height>
+             <height>566</height>
             </rect>
            </property>
            <attribute name="label">
@@ -702,6 +702,95 @@ font: bold</string>
             </item>
            </layout>
           </widget>
+          <widget class="QWidget" name="page_3">
+           <attribute name="label">
+            <string>Программа испытаний</string>
+           </attribute>
+           <layout class="QGridLayout" name="gridLayout_8">
+            <item row="0" column="0">
+             <layout class="QGridLayout" name="gridLayout_15">
+              <item row="2" column="0">
+               <widget class="QPushButton" name="btnLoadGCode33">
+                <property name="layoutDirection">
+                 <enum>Qt::LeftToRight</enum>
+                </property>
+                <property name="text">
+                 <string>Загрузить УП</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="1">
+               <widget class="QPushButton" name="btnProgram_Run33">
+                <property name="styleSheet">
+                 <string notr="true">background-color: rgb(138, 226, 52);</string>
+                </property>
+                <property name="text">
+                 <string>Пуск</string>
+                </property>
+                <property name="icon">
+                 <iconset>
+                  <normaloff>resources/play.png</normaloff>resources/play.png</iconset>
+                </property>
+                <property name="iconSize">
+                 <size>
+                  <width>36</width>
+                  <height>36</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="2">
+               <widget class="QPushButton" name="btnProgram_Stop33">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="styleSheet">
+                 <string notr="true">background-color: rgb(239, 41, 41);</string>
+                </property>
+                <property name="text">
+                 <string>Стоп</string>
+                </property>
+                <property name="icon">
+                 <iconset>
+                  <normaloff>resources/stop.png</normaloff>resources/stop.png</iconset>
+                </property>
+                <property name="iconSize">
+                 <size>
+                  <width>36</width>
+                  <height>36</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="0" colspan="3">
+               <widget class="GcodeEditor" name="gcode_editor33">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>300</width>
+                  <height>100</height>
+                 </size>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>500</width>
+                  <height>500</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
+           </layout>
+          </widget>
          </widget>
         </item>
         <item row="1" column="1" rowspan="5">
@@ -722,7 +811,14 @@ font: bold</string>
              </spacer>
             </item>
             <item>
-             <widget class="ActionButton" name="btnHome33">
+             <widget class="PushButton" name="btnHome33">
+              <property name="text">
+               <string>В начало</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="ActionButton" name="btnHome33_2">
               <property name="text">
                <string>В начало</string>
               </property>
@@ -1119,9 +1215,28 @@ font: bold</string>
            </layout>
           </item>
           <item>
+           <spacer name="verticalSpacer_4">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
            <layout class="QHBoxLayout" name="horizontalLayout_13">
             <item>
              <widget class="QLabel" name="label_93">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="text">
                <string>Команда MDI</string>
               </property>
@@ -1141,88 +1256,6 @@ font: bold</string>
              <widget class="QPushButton" name="btnCommand_Run33">
               <property name="text">
                <string>Исполнить</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-          <item>
-           <layout class="QGridLayout" name="gridLayout_15">
-            <item row="3" column="1">
-             <widget class="QPushButton" name="btnProgram_Stop33">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">background-color: rgb(239, 41, 41);</string>
-              </property>
-              <property name="text">
-               <string>Стоп</string>
-              </property>
-              <property name="icon">
-               <iconset>
-                <normaloff>resources/stop.png</normaloff>resources/stop.png</iconset>
-              </property>
-              <property name="iconSize">
-               <size>
-                <width>36</width>
-                <height>36</height>
-               </size>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="1">
-             <widget class="QPushButton" name="btnProgram_Run33">
-              <property name="styleSheet">
-               <string notr="true">background-color: rgb(138, 226, 52);</string>
-              </property>
-              <property name="text">
-               <string>Пуск</string>
-              </property>
-              <property name="icon">
-               <iconset>
-                <normaloff>resources/play.png</normaloff>resources/play.png</iconset>
-              </property>
-              <property name="iconSize">
-               <size>
-                <width>36</width>
-                <height>36</height>
-               </size>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="1">
-             <widget class="QPushButton" name="btnLoadGCode33">
-              <property name="layoutDirection">
-               <enum>Qt::LeftToRight</enum>
-              </property>
-              <property name="text">
-               <string>Загрузить УП</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="0" rowspan="3">
-             <widget class="GcodeEditor" name="gcode_editor33">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>300</width>
-                <height>100</height>
-               </size>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>500</width>
-                <height>500</height>
-               </size>
               </property>
              </widget>
             </item>
