--- a/BallScrewVCP3.ui
+++ b/BallScrewVCP3.ui
@@ -125,31 +125,6 @@ on</string>
             </property>
            </spacer>
           </item>
-          <item row="0" column="0" rowspan="3">
-           <widget class="LED" name="ledEnable33">
-            <property name="minimumSize">
-             <size>
-              <width>20</width>
-              <height>20</height>
-             </size>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">qproperty-color: green;
-qproperty-off_color: red;
-qproperty-diameter: 70;</string>
-            </property>
-            <property name="diameter">
-             <number>70</number>
-            </property>
-            <property name="off_color" stdset="0">
-             <color>
-              <red>255</red>
-              <green>0</green>
-              <blue>0</blue>
-             </color>
-            </property>
-           </widget>
-          </item>
           <item row="1" column="6">
            <widget class="LED" name="ledPos_Is_On33">
             <property name="color">
@@ -206,6 +181,31 @@ qproperty-diameter: 70;</string>
             </property>
            </widget>
           </item>
+          <item row="0" column="0" rowspan="3">
+           <widget class="LED" name="ledEnable33">
+            <property name="minimumSize">
+             <size>
+              <width>20</width>
+              <height>20</height>
+             </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">qproperty-color: green;
+qproperty-off_color: red;
+qproperty-diameter: 70;</string>
+            </property>
+            <property name="diameter">
+             <number>70</number>
+            </property>
+            <property name="off_color" stdset="0">
+             <color>
+              <red>255</red>
+              <green>0</green>
+              <blue>0</blue>
+             </color>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
         <item row="0" column="0" rowspan="6">
@@ -216,22 +216,6 @@ background-image: url(./resources/stripes.png);
 }</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_2">
-           <item row="8" column="0">
-            <widget class="PushButton" name="btnAppend_Buffer33">
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(252, 233, 79);</string>
-             </property>
-             <property name="text">
-              <string>append_buffer</string>
-             </property>
-             <property name="checkable">
-              <bool>false</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="7" column="0">
-            <widget class="QWidget" name="widget_2" native="true"/>
-           </item>
            <item row="5" column="0">
             <widget class="PushButton" name="btnTestActive4">
              <property name="styleSheet">
@@ -258,7 +242,93 @@ background-image: url(./resources/stripes.png);
              </property>
             </widget>
            </item>
-           <item row="10" column="0">
+           <item row="1" column="0">
+            <widget class="PushButton" name="btnTestActive0">
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(252, 233, 79);</string>
+             </property>
+             <property name="text">
+              <string>active_0</string>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+             <property name="checked_state_text_option" stdset="0">
+              <bool>false</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label">
+             <property name="styleSheet">
+              <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(239, 41, 41);
+font: bold</string>
+             </property>
+             <property name="text">
+              <string>Для тестов</string>
+             </property>
+             <property name="margin">
+              <number>5</number>
+             </property>
+            </widget>
+           </item>
+           <item row="9" column="0">
+            <widget class="PushButton" name="btnAppend_File33">
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(252, 233, 79);</string>
+             </property>
+             <property name="text">
+              <string>append_file</string>
+             </property>
+             <property name="checkable">
+              <bool>false</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="PushButton" name="btnTestActive1">
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(252, 233, 79);</string>
+             </property>
+             <property name="text">
+              <string>active_1</string>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="8" column="0">
+            <widget class="PushButton" name="btnAppend_Buffer33">
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(252, 233, 79);</string>
+             </property>
+             <property name="text">
+              <string>append_buffer</string>
+             </property>
+             <property name="checkable">
+              <bool>false</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="0">
+            <widget class="QWidget" name="widget_2" native="true"/>
+           </item>
+           <item row="6" column="0">
+            <widget class="PushButton" name="btnTestActive5">
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(252, 233, 79);</string>
+             </property>
+             <property name="text">
+              <string>active_5</string>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="11" column="0">
             <spacer name="verticalSpacer_3">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
@@ -284,73 +354,10 @@ background-image: url(./resources/stripes.png);
              </property>
             </widget>
            </item>
-           <item row="0" column="0">
-            <widget class="QLabel" name="label">
-             <property name="styleSheet">
-              <string notr="true">color: rgb(255, 255, 255);
-background-color: rgb(239, 41, 41);
-font: bold</string>
-             </property>
+           <item row="10" column="0">
+            <widget class="QPushButton" name="btnTest">
              <property name="text">
-              <string>Для тестов</string>
-             </property>
-             <property name="margin">
-              <number>5</number>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
-            <widget class="PushButton" name="btnTestActive0">
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(252, 233, 79);</string>
-             </property>
-             <property name="text">
-              <string>active_0</string>
-             </property>
-             <property name="checkable">
-              <bool>true</bool>
-             </property>
-             <property name="checked_state_text_option" stdset="0">
-              <bool>false</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0">
-            <widget class="PushButton" name="btnTestActive1">
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(252, 233, 79);</string>
-             </property>
-             <property name="text">
-              <string>active_1</string>
-             </property>
-             <property name="checkable">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="6" column="0">
-            <widget class="PushButton" name="btnTestActive5">
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(252, 233, 79);</string>
-             </property>
-             <property name="text">
-              <string>active_5</string>
-             </property>
-             <property name="checkable">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="9" column="0">
-            <widget class="PushButton" name="btnAppend_File33">
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(252, 233, 79);</string>
-             </property>
-             <property name="text">
-              <string>append_file</string>
-             </property>
-             <property name="checkable">
-              <bool>false</bool>
+              <string>testPlot</string>
              </property>
             </widget>
            </item>
@@ -375,14 +382,7 @@ font: bold</string>
              </spacer>
             </item>
             <item>
-             <widget class="PushButton" name="btnHome33">
-              <property name="text">
-               <string>В начало</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="ActionButton" name="btnHome33_2">
+             <widget class="ActionButton" name="btnHome33">
               <property name="text">
                <string>В начало</string>
               </property>
@@ -1124,42 +1124,45 @@ font: 15pt bold;</string>
            </attribute>
            <layout class="QGridLayout" name="gridLayout_4">
             <item row="0" column="0">
-             <layout class="QGridLayout" name="gridLayout_32">
-              <item row="1" column="1">
-               <spacer name="horizontalSpacer_13">
-                <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
-                </property>
-                <property name="sizeHint" stdset="0">
-                 <size>
-                  <width>40</width>
-                  <height>20</height>
-                 </size>
-                </property>
-               </spacer>
-              </item>
-              <item row="1" column="0">
-               <widget class="QPushButton" name="btnClear33">
-                <property name="text">
-                 <string>Очистить</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="0" colspan="2">
-               <widget class="PlotWidget" name="plt33" native="true">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-               </widget>
-              </item>
-             </layout>
+             <widget class="PlotWidget" name="plt33" native="true">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0" alignment="Qt::AlignHCenter">
+             <widget class="QPushButton" name="btnClear33">
+              <property name="minimumSize">
+               <size>
+                <width>42</width>
+                <height>42</height>
+               </size>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>86</width>
+                <height>16777215</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Очистить</string>
+              </property>
+             </widget>
             </item>
            </layout>
           </widget>
           <widget class="QWidget" name="page_3">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>0</y>
+             <width>503</width>
+             <height>566</height>
+            </rect>
+           </property>
            <attribute name="label">
             <string>Программа испытаний</string>
            </attribute>
@@ -1332,8 +1335,8 @@ font: 15pt bold;</string>
    <slot>onBtnClearPlot33()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>734</x>
-     <y>820</y>
+     <x>965</x>
+     <y>830</y>
     </hint>
     <hint type="destinationlabel">
      <x>784</x>
